# ipdf

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
examples/: sample.md
ipdf/: __init__.py  __main__.py  cli.py  converter.py  security.py  styles.py
macapp/: __init__.py  __main__.py  app.py  launcher.py  requirements.txt  setup_py2app.py
tests/: test_ipdf.py  test_macapp.py  test_security.py  test_webapp.py
webapp/: __init__.py  __main__.py  app.py  requirements.txt
webapp/static/: app.js  style.css
webapp/templates/: index.html
