[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipdf"
version = "0.1.0"
description = "Turn Markdown or Word documents into PDFs optimised for reading on an iPhone."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ipdf contributors" }]
keywords = ["markdown", "docx", "pdf", "iphone", "ebook", "weasyprint"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "weasyprint>=60,<69",
    "markdown>=3.4,<4",
    "mammoth>=1.6,<2",
]

[project.scripts]
ipdf = "ipdf.cli:main"

[project.optional-dependencies]
web = ["flask>=3.0,<4"]
mac = ["flask>=3.0,<4", "pywebview>=4.4,<6"]

[project.urls]
Homepage = "https://github.com/motdiem/ipdf"

[tool.setuptools.packages.find]
include = ["ipdf*", "webapp*", "macapp*"]

[tool.setuptools.package-data]
webapp = ["templates/*", "static/*"]
